--- a/trabalho.html/index.html
+++ b/trabalho.html/index.html
@@ -45,7 +45,7 @@
             </section> 
             <section class="mapa">
                         <h3 class="titulo-principal" >Nosso estabelecimento</h3>
-                        <p>Nosso estabelicimento esta localizado no coração da cidade.</p>
+                        <p>Nosso estabelicimento esta localizado no coração da cidade!</p>
                    <div class="mapa-conteudo">
                       <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d58516.067090669!2d-46.692239605325526!3d-23.55931240962963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salura%20sp!5e0!3m2!1spt-BR!2sbr!4v1642951806970!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                   </div>
